--- a/views/step2.html
+++ b/views/step2.html
@@ -21,7 +21,7 @@
 			<table class="table table-striped table-responsive">
 				<thead>
 				<tr>
-					<th>Title</th>
+					<th style="min-width: 120px;">Title</th>
 					<th>Description</th>
 					<th style="min-width: 40px;width: 100px;">Price</th>
 					<th style="min-width: 172px;width: 200px;">Popularity</th>
